stuff minor changes

--- a/stuff/stuff.ipynb
+++ b/stuff/stuff.ipynb
@@ -59,13 +59,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "with_sites = \"\"\"Sergey Pavlov [ref=https://adasegroup.github.io/team/SergeyPavlov/] – Ms student, MIPT (SU)\n",
+    "Alexander Korotin [ref=https://adasegroup.github.io/team/AlexanderKorotin/] – Ms student, MIPT (SU)\n",
+    "Alexander Bernstein [ref= http://faculty.skoltech.ru/people/alexanderbernstein] – Principal Research Scientis, CDISE, Skoltech\n",
+    "Alexey Zaytsev [ref= http://faculty.skoltech.ru/people/alexeizaitsev] – Junior Research Scientist, CDISE, Skoltech\n",
+    "Maxim Panov [ref= http://faculty.skoltech.ru/people/maximpanov] – Junior Research Scientist, CDISE, Skoltech\n",
+    "Vladimir Spokoiny [ref= http://www.wias-berlin.de/people/spokoiny/] – Professor at the Departments of Mathematics and Economics of the Humboldt University of Berlin\n",
+    "Albert Shiryaev [ref= https://cees-www.mit.edu/index.php/team-2/item/20-albert-n-shiryaev.html] – Professor, Head Theory of Probability, Chair, Department of Mechanics and Mathematics, M.V. Lomonosov Moscow State University\n",
+    "Bruno Sudret [ref= http://www.sudret.ibk.ethz.ch/people/prof-dr-bruno-sudret.html] – Prof. Dr., Department of Civil, Environmental and Geomatic Engineering\n",
+    "Dmitry Yarotsky [ref= http://faculty.skoltech.ru/people/dmitryyarotskiy] – Leading Research Scientist, CDISE, Skoltech\n",
+    "Pavel Prikhodko [ref= …] – …\n",
+    "Vladimir Vovk [ref= http://www.vovk.net/] – professor, Royal Holloway, University of London\n",
+    "Alex Gammerman [ref= http://www.gammerman.com/] – doctor, Royal Holloway, University of London\n",
+    "Ilia Nouretdinov [ref= https://pure.royalholloway.ac.uk/portal/en/persons/ilia-nouretdinov(e4136840-3249-47a8-81b6-9f89fdabce36).html] – professor, Royal Holloway, University of London\n",
+    "Denis Belomestny [ref= https://www.uni-due.de/~hm0124/index.php] – Prof. Dr., Duisburg-Essen University\"\"\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "df_stuff = pd.DataFrame(stuff.split('\\n'))"
+    "df_stuff = pd.DataFrame(with_sites.split('\\n'))"
    ]
   },
   {
@@ -138,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 81,
    "metadata": {
     "collapsed": false
    },
@@ -147,32 +171,12 @@
     "with open(\"../stuff.md\", mode='a') as f:\n",
     "    for (name_, surname_, dol_, jnost_) in df_stuff[0].str.split(' ').apply(lambda x: (x[0], x[1], x[4], x[5])):\n",
     "        f.write('[' + name_ + ' ' + surname_  + \"](/stuff/\" + name_ + surname_ + ') - '\n",
-    "                        + dol_ + ' ' + jnost_ +'\\n')"
+    "                        + dol_ + ' ' + jnost_ + '\\n\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-52-1f081a2259cb>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-52-1f081a2259cb>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    '[' + name_ + ' ' + surname_ \"](/stuff/\" + name_ + surname_ + ')'\u001b[0m\n\u001b[0m                                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "\"](/stuff/\" + name_ + surname_ + ')'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 80,
    "metadata": {
     "collapsed": false
    },
@@ -180,38 +184,31 @@
     {
      "data": {
       "text/plain": [
-       "0     (Vladimir, Ignatiev, junior, research)\n",
-       "1              (Ivan, Nazarov, PhD, student)\n",
-       "2          (Dmitry, Smolyakov, PhD, student)\n",
-       "3           (Yermek, Kapushev, PhD, student)\n",
-       "4             (Sergey, Ivanov, PhD, student)\n",
-       "5        (Nikita, Klyuchnikov, PhD, student)\n",
-       "6       (Alexander, Notchenko, PhD, student)\n",
-       "7            (Albert, Matveyev, Ms, student)\n",
-       "8        (Vladislav, Ishimtsev, Ms, student)\n",
-       "9           (Denis, Volkhonsky, Ms, student)\n",
-       "10             (Evgeny, Egorov, Ms, student)\n",
-       "11            (Ruslan, Kostoev, Ms, student)\n",
-       "12         (Anton, Rykachevsky, Ms, student)\n",
-       "13            (Alexey, Ryabykh, Ms, student)\n",
-       "14           (Nikita, Gryaznov, Ms, student)\n",
-       "15             (Ivan, Makhotin, Ms, student)\n",
-       "16               (Anton, Marin, Ms, student)\n",
-       "17            (German, Novikov, Ms, student)\n",
-       "18                 (Anton, Pankratov, –, Ms)\n",
-       "19             (Oleg, Khomenko, Ms, student)\n",
-       "20              (Oleg, Sudakov, Ms, student)\n",
-       "21            (Sergey, Pavlov, Ms, student,)\n",
-       "22        (Alexander, Korotin, Ms, student,)\n",
+       "0           (Sergey, Pavlov, Ms, student,)\n",
+       "1       (Alexander, Korotin, Ms, student,)\n",
+       "2     (Alexander, Bernstein, –, Principal)\n",
+       "3             (Alexey, Zaytsev, –, Junior)\n",
+       "4                (Maxim, Panov, –, Junior)\n",
+       "5       (Vladimir, Spokoiny, –, Professor)\n",
+       "6        (Albert, Shiryaev, –, Professor,)\n",
+       "7                (Bruno, Sudret, –, Prof.)\n",
+       "8           (Dmitry, Yarotsky, –, Leading)\n",
+       "9                 (Pavel, Prikhodko, –, …)\n",
+       "10         (Vladimir, Vovk, –, professor,)\n",
+       "11           (Alex, Gammerman, –, doctor,)\n",
+       "12      (Ilia, Nouretdinov, –, professor,)\n",
+       "13           (Denis, Belomestny, –, Prof.)\n",
        "Name: 0, dtype: object"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "df_stuff[0].str.split(' ').apply(lambda x: (x[0], x[1], x[4], x[5]))"
+   ]
   },
   {
    "cell_type": "code",
