Add to-be-filled project pages for 3DDL papers

--- a/_content/_projects/3ddl/2019-06-18-abc.md
+++ b/_content/_projects/3ddl/2019-06-18-abc.md
@@ -63,3 +63,5 @@ materials:
       url: https://archive.nyu.edu/handle/2451/43778
       icon: fa fa-database
 ---
+## Details
+You can find more details on the [project page](https://deep-geometry.github.io/abc-dataset/).
