Add filtering of the projects on the titlepage via to_front attribute

--- a/_content/_projects/2000-01-01-template.md
+++ b/_content/_projects/2000-01-01-template.md
@@ -21,6 +21,8 @@ affiliation:
   - Higher School of Economics
   - New York University
 venue: arXiv 2019
+# optional parameter for allowing the project to appear on the title page of the website
+# to_front: True
 
 excerpt: Short description of the project that will be displayed in the list of the projects.
 abstract: Full abstract of the project that will be displayed in the project page.
