--- a/_content/_projects/3ddl/2019-06-18-abc.md
+++ b/_content/_projects/3ddl/2019-06-18-abc.md
@@ -34,6 +34,7 @@ affiliation:
   - IITP
   - New York University
 venue: Conference on Computer Vision and Pattern Recognition 2019
+to_front: True
 
 thumbnail: /assets/img/projects/abc/thumbnail.jpg
 visual_abstract: /assets/img/projects/abc/teaser-pic.jpg
