Add ordering for the projects on the title page

--- a/_content/_projects/2000-01-01-template.md
+++ b/_content/_projects/2000-01-01-template.md
@@ -21,8 +21,9 @@ affiliation:
   - Higher School of Economics
   - New York University
 venue: arXiv 2019
-# optional parameter for allowing the project to appear on the title page of the website
-# to_front: True
+# optional parameter allowing the project to appear on the title page of the website
+# the projects are sorted w.r.t front_id in the descending order
+# front_id: 9999
 
 excerpt: Short description of the project that will be displayed in the list of the projects.
 abstract: Full abstract of the project that will be displayed in the project page.
