--- a/_content/_projects/3ddl/2019-06-18-abc.md
+++ b/_content/_projects/3ddl/2019-06-18-abc.md
@@ -2,6 +2,7 @@
 layout: project_page
 team: 3ddl
 categories: 3ddl
+front_id: 1000
 
 title: 'ABC: A Big CAD Model Dataset For Geometric Deep Learning'
 authors:
@@ -34,7 +35,6 @@ affiliation:
   - IITP
   - New York University
 venue: Conference on Computer Vision and Pattern Recognition 2019
-to_front: True
 
 thumbnail: /assets/img/projects/abc/thumbnail.jpg
 visual_abstract: /assets/img/projects/abc/teaser-pic.jpg
