Extend project template; add example of homeless project

--- a/_content/_projects/2000-01-01-template.md
+++ b/_content/_projects/2000-01-01-template.md
@@ -1,33 +1,63 @@
 ---
+# Lines starting with the # are comments.
+# This file is split in two sections: the header and the content.
+# The header is enclosed in `---` and is a meta data of the project in YAML format.
+# The content goes right after the closing `---` of the header,
+# is written in Markdown and is compiled right into the project page.
+
+# Name the file in the format yyyy-mm-dd-title-of-the-page.md,
+# where yyyy-mm-dd is the date of publication (of the paper, not the project page).
+# For example, the url of the project page for 2019-10-29-perceptual-depth-sr.md
+# is http://adase.group/3ddl/projects/perceptual-depth-sr/ (more about /3ddl/ below).
+
+#--- Remove the line below: it excludes this template from the site release.
 published: false
+
+#--- Do not change the layout unless you know what you're doing.
 layout: project_page
-# optional parameter for switching to subgroup-specific version of the site
-# team: 3ddl
-# optional list of categories
+
+#--- Optional parameter for switching to the subgroup-specific version of the site.
+#--- I.e, compare the header at http://adase.group/dlpa/projects/nas-bench-nlp/
+#--- with the header at http://adase.group/3ddl/projects/perceptual-depth-sr/
+team: 3ddl
+
+#--- Optional list of categories meant to be used for separation of research directions.
+#--- For example, with
+categories: 3ddl
+#--- the project page will reside under adase.group/3ddl/projects/title , and
 # categories: [category1, category2]
-# meant to be used for separation of research directions, e.g
-# categories: 3ddl
-# will reside under under adase.group/3ddl/projects/title
+#--- will reside under adase.group/category1/category2/projects/title
+#--- Note that the parent directory of the file,
+#--- e.g _projects/3ddl for 2019-10-29-perceptual-depth-sr.md ,
+#--- does not affect the url and is only used for grouping of the source files.
+
+#--- Optional parameter allowing the project to appear on the title page of the website.
+#--- The projects are sorted w.r.t front_id in the descending order.
+#--- We put the fashionable projects in front of the others using front_id: 1XXX.
+# front_id: 9999
 
 title: Title of the Project
+
 authors:
   - name: Name Surname
     affiliation: 1
   - name: Name Surname
     affiliation: '2, 3'
     page: https://faculty.skoltech.ru/people/evgenyburnaev
+
 affiliation:
   - Skolkovo Institute of Science and Technology
   - Higher School of Economics
   - New York University
-venue: arXiv 2019
-# optional parameter allowing the project to appear on the title page of the website
-# the projects are sorted w.r.t front_id in the descending order
-# front_id: 9999
 
-excerpt: Short description of the project that will be displayed in the list of the projects.
+venue: arXiv 2019
+
+excerpt: Short description of the project that will be displayed in the rich list of the projects.
+#--- At the moment, only the 3DDL team uses the rich list http://adase.group/3ddl/publications/
+
 abstract: Full abstract of the project that will be displayed in the project page.
-# optional bibtex that will be displayed in the materials section (see below); cannot contain double quotes
+
+#--- Optional bibtex that will be displayed in the materials section (see below); cannot contain double quotes.
 bibtex: "\
 @InProceedings{Koch_2019_CVPR,
 author = {Koch, Sebastian and Matveev, Albert and Jiang, Zhongshi and Williams, Francis and Artemov, Alexey and Burnaev, Evgeny and Alexa, Marc and Zorin, Denis and Panozzo, Daniele},
@@ -37,13 +67,28 @@ month = {June},
 year = {2019}
 }"
 
-# optional graphical abstract that will be displayed in the project page
-visual_abstract: /assets/img/projects/perceptual_depth_sr/teaser-pic.png
-# optional thumbnail that will be displayed in the list of the projects
-#  if absent but `visual_abstract` is present then it will be used
-thumbnail: /assets/img/projects/perceptual_depth_sr/teaser-pic.png
+#--- Optional graphical abstract that will be displayed in the project page,
+#--- e.g http://adase.group/3ddl/projects/3d-laplatgan/
+visual_abstract: /assets/img/projects/3d_laplatgan/teaser-pic.jpg
 
-# optional section with materials that will be displayed in the project page and in the list of the projects
+#--- Optional description of the graphical abstract.
+#--- You may use plain HTML for complex text constructions, like subscript.
+visual_abstract_description: Full architecture of LSLP-GAN model. The network either accepts or generates an initial point cloud X<sub>0</sub> and processes it with a series of K learnable steps. Each step (1) upsamples its input using a non-learnable operator U, (2) encodes the upsampled version into the latent space by f<sub>k</sub>, (3) performs correction of the latent code via a conditional GAN G<sub>k</sub>, and (4) decodes the corrected latent code using g<sub>k</sub>.
+
+#--- Optional thumbnail that will be displayed in the rich list of the projects
+#--- and in the title page of the website if front_id is set,
+#--- e.g http://adase.group/3ddl/publications/#2020
+#--- If not set but visual_abstract is set then it will be used.
+thumbnail: /assets/img/projects/3d_laplatgan/thumbnail.jpg
+#--- A couple of remarks regarding visual_abstract and thumbnail.
+#--- First, do not put them in assets/img, put them in src/img and recompile,
+#--- see https://github.com/adasegroup/adasegroup.github.io/wiki/How-to-Add-a-Project-Page
+#--- Second, compress them as much as possible without loss of readability.
+#--- You don't want the other researchers that come to our website wait for too long while the page is loading.
+#--- `convert source_thumbnail.ext -resize "400x400" thumbnail.jpg` and
+#--- `convert source_teaser.ext -resize "2000x2000" teaser.jpg` usually suffice.
+
+#--- Optional section with materials that will be displayed in the project page and in the list of the projects.
 materials:
     - name: Paper
       url: https://arxiv.org/pdf/1812.09874.pdf
