Add project pages for mfasc, mfgpc; fix nasbench

--- a/_content/_projects/2000-01-01-template.md
+++ b/_content/_projects/2000-01-01-template.md
@@ -90,6 +90,7 @@ thumbnail: /assets/img/projects/3d_laplatgan/thumbnail.jpg
 
 #--- Optional section with materials that will be displayed in the project page and in the list of the projects.
 materials:
+    #--- Put the link to _PDF_
     - name: Paper
       url: https://arxiv.org/pdf/1812.09874.pdf
       icon: fa fa-file-pdf-o
