--- a/_content/_projects/dlpa/2019-09-09-mfasc.md
+++ b/_content/_projects/dlpa/2019-09-09-mfasc.md
@@ -10,7 +10,7 @@ authors:
   - name: Nikita Klyuchnikov
     affiliation: '1'
   - name: Davide Mottin
-    affiliation: '2
+    affiliation: '2'
   - name: Georgia Koutrika
     affiliation: '3'
   - name: Emmanuel Müller
@@ -34,20 +34,12 @@ visual_abstract: /assets/img/projects/mfasc/mfacts_intro-picture.png
 visual_abstract_description: 'MF-ASC Framework.'
 bibtex: "\
 @inproceedings{10.1145/3292500.3330893,
-author = {Klyuchnikov, Nikita and Mottin, Davide and Koutrika, Georgia and M\"{u}ller, Emmanuel and Karras, Panagiotis},
+author = {Klyuchnikov, Nikita and Mottin, Davide and Koutrika, Georgia and Muller, Emmanuel and Karras, Panagiotis},
 title = {Figuring out the User in a Few Steps: Bayesian Multifidelity Active Search with Cokriging},
 year = {2019},
-isbn = {9781450362016},
-publisher = {Association for Computing Machinery},
-address = {New York, NY, USA},
-url = {https://doi.org/10.1145/3292500.3330893},
-doi = {10.1145/3292500.3330893},
 booktitle = {Proceedings of the 25th ACM SIGKDD International Conference on Knowledge Discovery & Data Mining},
 pages = {686–695},
-numpages = {10},
-keywords = {multifidelity, active search, bayesian methods, cokriging},
-location = {Anchorage, AK, USA},
-series = {KDD ’19}
+numpages = {10}
 }"
 
 materials:
