--- a/_content/_projects/dlpa/2020-06-15-mf-nas-kd.md
+++ b/_content/_projects/dlpa/2020-06-15-mf-nas-kd.md
@@ -38,7 +38,7 @@ bibtex: "\
 
 materials:
     - name: Paper
-      url: https://arxiv.org/abs/2006.08341
+      url: https://arxiv.org/pdf/2006.08341.pdf
       icon: fa fa-file-pdf-o
     - name: Code
       url: https://github.com/IlyaTrofimov/MF_NAS_KD
