--- a/_content/_projects/2000-01-01-template.md
+++ b/_content/_projects/2000-01-01-template.md
@@ -1,5 +1,5 @@
 ---
-# Lines starting with the # are comments.
+# Lines starting with the # are comments. For clarity, remove them after you finish.
 # This file is split in two sections: the header and the content.
 # The header is enclosed in `---` and is a meta data of the project in YAML format.
 # The content goes right after the closing `---` of the header,
@@ -85,8 +85,8 @@ thumbnail: /assets/img/projects/3d_laplatgan/thumbnail.jpg
 #--- see https://github.com/adasegroup/adasegroup.github.io/wiki/How-to-Add-a-Project-Page
 #--- Second, compress them as much as possible without loss of readability.
 #--- You don't want the other researchers that come to our website wait for too long while the page is loading.
-#--- `convert source_thumbnail.ext -resize "400x400" thumbnail.jpg` and
-#--- `convert source_teaser.ext -resize "2000x2000" teaser.jpg` usually suffice.
+#--- `convert source_thumbnail.ext -thumbnail '400x250>' -background white -gravity center -extent 400x250 thumbnail.jpg`
+#--- and `convert source_teaser.ext -resize "2000x2000" teaser.jpg` usually suffice.
 
 #--- Optional section with materials that will be displayed in the project page and in the list of the projects.
 materials:
