--- a/_content/_projects/neuro/2020-01-03-fader.md
+++ b/_content/_projects/neuro/2020-01-03-fader.md
@@ -24,6 +24,7 @@ venue:  Thirteenth International Conference on Machine Vision (MV20)
 to_front: True
 
 abstract: "ABIDE is the largest open-source autism spectrum disorder database with both fMRI data and full phenotype description. These data were extensively studied based on functional connectivity analysis as well as with deep learning on raw data, with top models accuracy close to 75% for separate scanning sites. Yet there is still a problem of models transferability between different scanning sites within ABIDE. In the current paper, we for the first time perform domain adaptation for brain pathology classification problem on raw neuroimaging data. We use 3D convolutional autoencoders to build the domain irrelevant latent space image representation and demonstrate this method to outperform existing approaches on ABIDE data."
+excerpt: ''
 
 thumbnail: /assets/img/neuro/research/fmri_fader.png
 
@@ -47,5 +48,3 @@ materials:
 ---
 ## Contact
 If you have any questions about this work, please contact us under [ekaterina.kondrateva@skoltech.ru](mailto:ekaterina.kondrateva@skoltech.ru).
-
----
