--- a/_content/_projects/neuro/2020-01-04-fcd.md
+++ b/_content/_projects/neuro/2020-01-04-fcd.md
@@ -25,12 +25,14 @@ authors:
     affiliation: 1
 affiliation:
   - 1, Skolkovo Institute of Science and Technology
+#--- FIXME
   - 2, 
 
 venue:  The 9th International Conference on Analysis of Images, Social Networks and Texts (AIST2020)
 to_front: True
 
 abstract: "Focal cortical dysplasia (FCD) is one of the most common epileptogenic lesions associated with cortical development malformations. However, the accurate detection of the FCD relies on the radiologist professionalism, and in many cases, the lesion could be missed. In this work, we solve the problem of automatic identification of FCD on magnetic resonance images (MRI). For this task, we improve recent methods of Deep Learning-based FCD detection and apply it for a dataset of 15 labeled FCD patients. The model results in the successful detection of FCD on 11 out of 15 subjects."
+excerpt: ''
 
 thumbnail: /assets/img/neuro/research/fcd_ruslan.png
 
@@ -52,5 +54,3 @@ materials:
 ---
 ## Contact
 If you have any questions about this work, please contact us under [ekaterina.kondrateva@skoltech.ru](mailto:ekaterina.kondrateva@skoltech.ru).
-
----
