--- a/_content/_activities/neuro/2020-11-01-adase.fair.md
+++ b/_content/_activities/neuro/2020-11-01-adase.fair.md
@@ -9,13 +9,13 @@ excerpt: We are happy to announce new BS and MS research positions, join!
 
 #### ADASE lab FAIR! FALL 2020
 
-**New year, new FAIR!** ADASE research lab want you to join to contribute in Geometry of Machine Learning. 
+**New year, new FAIR!** ADASE research lab wants you to join to contribute in Geometry of Machine Learning. 
 
-We opened the researh positions in three research directions:
+We opened the research positions in three research directions:
 - Neuro applications of ML
 - 3D Deep Learning and Computer Vision
 - Deep Learning and Predictive Analytics
 
-Want more? Use our `telegram` bot to find your advisor and learn how to prepare to interview, tap[here](https://t.me/FindAdviserBot).
+Want more? Use our `telegram` bot to find your advisor and learn how to prepare to interview, tap [here](https://t.me/FindAdviserBot).
 
-[![BCI2019](/assets/img/neuro/activity/fair.png)](https://t.me/FindAdviserBot "The course!")
+[![BCI2019](/assets/img/neuro/activity/fair.png)](https://t.me/FindAdviserBot "The bot!")
