Make adase fair global

--- a/_content/_activities/neuro/2020-11-01-adase.fair.md
+++ b/_content/_activities/neuro/2020-11-01-adase.fair.md
@@ -1,21 +1,7 @@
 ---
-layout: neuro_page
 team: neuro
 categories: neuro
 title: Research Fair in ADASE!
 date: 2020-10-27
-excerpt: We are happy to announce new BS and MS research positions, join!
+redirect_to: /news/2020-10-27-adase.fair/
 ---
-
-#### ADASE lab FAIR! FALL 2020
-
-**New year, new FAIR!** ADASE research lab wants you to join to contribute in Geometry of Machine Learning. 
-
-We opened the research positions in three research directions:
-- Neuro applications of ML
-- 3D Deep Learning and Computer Vision
-- Deep Learning and Predictive Analytics
-
-Want more? Use our `telegram` bot to find your advisor and learn how to prepare to interview, tap [here](https://t.me/FindAdviserBot).
-
-[![BCI2019](/assets/img/neuro/activity/fair.png)](https://t.me/FindAdviserBot "The bot!")
